Fixed URL construction to allow index backfill